--- a/css/main.css
+++ b/css/main.css
@@ -1,67 +1,84 @@
+.test{
+    background:yellow !important;
+}
+
 body{
     background:green !important;
 }
-.SolitareCard{
-    height: 215px;
-    width: 150px;
+
+.cardPlaceholder{
+    height: 9em;
+    width: 7em;
     float: left;
-    margin: 10px;
+    margin: 1%;
+    background: rgba(78, 250, 78, 0.774);
+    border-radius: 6px;
+}
+
+.SolitareCard{
+    height: 100%;
+    width: 100%;
+    float: left;
+    margin: 1%;
     border: 1px solid black;
     border-radius: 6px;
-    background:white;
 }
 
 
 
-.SolitareCard #deck{
- 
+#deck{
+    margin: 10%;
     background:rgb(139, 81, 81);
 }
 
-.SolitareCard .dealt{
-    height: 215px;
-    width: 150px;
-    float: left;
-    margin: auto;
-    border: 1px solid black;
-    border-radius: 6px;
-    background:white;
-    
-}
 
 
+/*SUITS CLASS'*/
 .suits{
  
     background:rgba(238, 234, 234, 0.383) !important;
-    height: 215px;
-    width: 150px;
+   
     float: right;
     margin: 10px;
     border: 1px solid black;
     border-radius: 6px;
 }
 
-
-.SolitareCard .dealt{
-    margin-right: 22px !important;
+.hearts{
+    background:rgb(179, 19, 19);
 }
+.clubs{
+    background: rgba(14, 1, 1, 0.822);
+}
+.diamonds{
+    background: greenyellow;
+}
+.spades{
+    background: pink;
+}
+
+/*END SUIT CLASS'*/
+
+
+
 
 #deckShown{
     position: relative;
 }
-
-.shownCard{
-    width:100%;
-    height: 100%;
-    border-radius: 6px;
-}
-
 .topCard{
     display: none;
     position: absolute;
 }
 
-.faceDown{
-    border: 3px solid black;
-    background: red;
+
+.newCard{
+    display: none;
+    position: absolute;
+    margin: 10%;
 }
+
+.facedown{
+    background: rgba(221, 42, 42, 0.808);
+    
+}
+
