fix margin of cards coming form deck
check to see if selected cards have next sibling element

selected cards have to be  lastchild to go into suit placeholder

almosted fixed deck click event

--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,8 @@ body{
     position: relative;
 }
 
+/*.cardPlaceholder:hover ~ .cardPlaceholder{border: 3px solid white;}*/
+
 .SolitareCard{
     height: 100%;
     width: 100%;
